상단 바 완성

--- a/BobmooAnd/android/app/src/main/AndroidManifest.xml
+++ b/BobmooAnd/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="bobmoo"
+        android:label="밥묵자"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
