--- a/BobmooAnd/pubspec.yaml
+++ b/BobmooAnd/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
     version: ^3.0.0
   path_provider: ^2.1.5
   get_it: ^8.2.0
+  
+  home_widget: ^0.8.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
