위젯 추가 작업중 0919

--- a/BobmooAnd/pubspec.yaml
+++ b/BobmooAnd/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   path_provider: ^2.1.5
   get_it: ^8.2.0
   in_app_update: ^4.2.5
+  
+  home_widget: ^0.8.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
