위젯 추가 작업중 0919

--- a/BobmooAnd/pubspec.yaml
+++ b/BobmooAnd/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.5.0
   flutter_svg: ^2.2.1
+  home_widget: ^0.8.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
