--- a/BobmooAnd/pubspec.yaml
+++ b/BobmooAnd/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A new Flutter project."
 publish_to: 'none'
 
 # 버전 설정 versionName+versionCode
-version: 0.1.2+4
+version: 0.1.3+7
 
 environment:
   sdk: ^3.9.2
@@ -31,6 +31,7 @@ dependencies:
     version: ^3.0.0
   path_provider: ^2.1.5
   get_it: ^8.2.0
+  in_app_update: ^4.2.5
 
 dev_dependencies:
   flutter_test:
