--- a/BobmooAnd/android/app/src/main/AndroidManifest.xml
+++ b/BobmooAnd/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,18 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <receiver
+            android:name=".MealGlanceWidgetReceiver"
+            android:exported="true"
+            android:label="오늘의 학식 위젯 (Glance)">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/meal_widget_info_2x2" />
+        </receiver>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
