--- a/BobmooAnd/pubspec.yaml
+++ b/BobmooAnd/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   
   home_widget: ^0.8.0
   shared_preferences: ^2.5.3
+  workmanager: ^0.9.0+3
 
 dev_dependencies:
   flutter_test:
