--- a/BobmooAnd/android/app/src/main/AndroidManifest.xml
+++ b/BobmooAnd/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     
     <application
         android:label="@string/app_name"
@@ -40,6 +41,7 @@
             android:label="오늘의 학식 위젯">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.intent.action.TIME_TICK" />
             </intent-filter>
             <meta-data
                 android:name="android.appwidget.provider"
