--- a/BobmooCrawlling/requirements.txt
+++ b/BobmooCrawlling/requirements.txt
@@ -1,4 +1,4 @@
-requests
-beautifulsoup4 
-fake_useragent
-
+playwright==1.40.0
+google-generativeai==0.3.2
+beautifulsoup4==4.12.2
+python-dotenv==1.0.0
