fix: 위젯 업데이트 중앙 매니저를 통해 서로 간섭하는 버그 해결

--- a/BobmooAnd/android/app/src/main/AndroidManifest.xml
+++ b/BobmooAnd/android/app/src/main/AndroidManifest.xml
@@ -58,6 +58,14 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/all_cafeterias_widget_info" />
         </receiver>
+
+        <receiver
+            android:name=".WidgetUpdateManager"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.hwoo.bobmoo.action.WIDGET_UPDATE" />
+            </intent-filter>
+        </receiver>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
