--- a/BobmooAnd/pubspec.yaml
+++ b/BobmooAnd/pubspec.yaml
@@ -5,8 +5,6 @@ publish_to: 'none'
 # 버전 설정 versionName+versionCode
 version: 1.0.1+11
 
-isar_version: &isar_version 3.3.0-dev.3 # define the version to be used
-
 environment:
   sdk: ^3.9.2
 
@@ -22,9 +20,9 @@ dependencies:
   flutter_svg: ^2.2.1
 
   isar_community: 
-    version: *isar_version
+    version: ^3.3.0
   isar_community_flutter_libs: # contains Isar Core
-    version: *isar_version
+    version: ^3.3.0
 
   path_provider: ^2.1.5
   get_it: ^8.2.0
@@ -43,7 +41,7 @@ dev_dependencies:
 
   build_runner: any
   isar_community_generator: 
-    version: *isar_version
+    version: ^3.3.0
 
 flutter:
   uses-material-design: true
