--- a/BobmooAnd/pubspec.yaml
+++ b/BobmooAnd/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   home_widget: ^0.8.0
   shared_preferences: ^2.5.3
   workmanager: ^0.9.0+3
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
