[Fix] #14 - Font 경로 수정

--- a/BobmooAnd/pubspec.yaml
+++ b/BobmooAnd/pubspec.yaml
@@ -51,26 +51,20 @@ flutter:
 
   assets:
     - assets/icons/
-
-  
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
+    - assets/fonts/
+    
   fonts:
     - family: Pretendard
       fonts:
-        - asset: fonts/Pretendard-Regular.otf
+        - asset: assets/fonts/Pretendard-Regular.ttf
           weight: 400
-        - asset: fonts/Pretendard-Medium.otf
+        - asset: assets/fonts/Pretendard-Medium.ttf
           weight: 500
-        - asset: fonts/Pretendard-SemiBold.otf
+        - asset: assets/fonts/Pretendard-SemiBold.ttf
           weight: 600
-        - asset: fonts/Pretendard-Bold.otf
+        - asset: assets/fonts/Pretendard-Bold.ttf
           weight: 700
-          
+
 flutter_launcher_icons:
   android: true
   ios: true
