--- a/BobmooAnd/pubspec.yaml
+++ b/BobmooAnd/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^2.5.3
   workmanager: ^0.9.0+3
   flutter_screenutil: ^5.9.3
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
