--- a/BobmooAnd/pubspec.yaml
+++ b/BobmooAnd/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   workmanager: ^0.9.0+3
   flutter_screenutil: ^5.9.3
   package_info_plus: ^9.0.0
+  firebase_core: ^4.2.1
+  firebase_analytics: ^12.0.4
 
 dev_dependencies:
   flutter_test:
