--- a/BobmooAnd/pubspec.yaml
+++ b/BobmooAnd/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   package_info_plus: ^9.0.0
   firebase_core: ^4.2.1
   firebase_analytics: ^12.0.4
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
